k8s/apps/auth/authelia/ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app.kubernetes.io/name: authelia
  name: authelia
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: authelia
  template:
    metadata:
      labels:
        app.kubernetes.io/name: authelia
    spec:
      containers:
      - args:
        - --config=/configuration.yaml
        - --config=/configuration.oidc.yaml
        command:
        - authelia
        image: ghcr.io/authelia/authelia:4.37.5
        imagePullPolicy: IfNotPresent
        name: authelia
        ports:
        - containerPort: 9091
          name: http
          protocol: TCP
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /api/health
            port: http
            scheme: HTTP
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /api/health
            port: http
            scheme: HTTP
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 5
        resources: {}
        startupProbe:
          failureThreshold: 6
          httpGet:
            path: /api/health
            port: http
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /configuration.yaml
          name: config
          readOnly: true
          subPath: configuration.yaml
        - mountPath: /lldap-secrets
          name: lldap-secrets
          readOnly: true
        - mountPath: /secrets
          name: authelia-secrets
          readOnly: true
        - mountPath: /configuration.oidc.yaml
          subPath: configuration.oidc.yaml
          name: authelia-oidc
          readOnly: true
      restartPolicy: Always
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: configuration.yaml
            path: configuration.yaml
          name: authelia
        name: config
      - name: lldap-secrets
        secret:
          defaultMode: 420
          items:
          - key: lldap-bind-password
            path: LDAP_PASSWORD
          secretName: lldap-secrets
      - name: authelia-secrets
        secret:
          defaultMode: 420
          items:
          - key: authelia-jwt-token
            path: JWT_TOKEN
          - key: authelia-session-encryption-key
            path: SESSION_ENCRYPTION_KEY
          - key: authelia-storage-encryption-key
            path: STORAGE_ENCRYPTION_KEY
          - key: authelia-storage-password
            path: STORAGE_PASSWORD
          - key: authelia-redis-password
            path: REDIS_PASSWORD
          - key: authelia-oidc-hmac-private-key
            path: OIDC_PRIVATE_KEY
          - key: authelia-oidc-hmac-secret
            path: OIDC_HMAC_SECRET
          secretName: authelia-secrets
      - name: authelia-oidc
        secret:
          defaultMode: 420
          items:
          - key: configuration.oidc.yaml
            path: configuration.oidc.yaml
          secretName: authelia-oidc
